--- a/GeographyProject.css
+++ b/GeographyProject.css
@@ -9,7 +9,7 @@ body {
 
 header {
     background-color: #333;
-    color: #fff;
+    color: #000000;
     text-align: center;
     padding: 1em 0;
 }
