--- a/GeographyProject.css
+++ b/GeographyProject.css
@@ -8,8 +8,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #000000;
+    background-color: #BF360C;
+    color: #fff;
     text-align: center;
     padding: 1em 0;
 }
